# azlin

./: .cli_doc_hashes.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE_MEMORY_LATENCY.md  ARCHITECTURE_SUMMARY.md  AUTH_ARCHITECTURE_ANALYSIS.md  AUTH_IMPLEMENTATION_GUIDE.md  AUTONOMOUS_WORK_SUMMARY.md  AZURE_CLI_WSL2_DOCS_QUICKREF.md  AZURE_FILES_NFS_REQUIREMENTS.md  AZURE_SSH_LIMITATION.md  BASTION_CP_DOCUMENTATION.md  BRICK4_IMPLEMENTATION_REPORT.md  BRICK4_INTEGRATION_EXAMPLE.md  BRICK5_IMPLEMENTATION_REPORT.md  BRICK6_IMPLEMENTATION_REPORT.md  BUG_FIX_HOME_SYNC.md  CHANGELOG.md  CHECKLIST.md  CLI_ARCHITECTURE_ANALYSIS.md  CLI_COMMANDS_PATTERN_ANALYSIS.md  CLI_DECOMPOSITION_HANDOFF.md  CLI_DECOMPOSITION_PLAN.md  CLI_REFACTORING_REQUIREMENTS.md  CLI_REFACTOR_PRESERVATION_GUIDE.md  COMPOUND_NAMING_DOCS.md  DECOMPOSITION_PLAN.md  DESIGN_NFS_STORAGE.md  DESIGN_UPDATE_COMMAND.md  DESTROY_CLI_INTEGRATION.md  DOCUMENTATION_FIX_PLAN.md  DOCUMENTATION_INCONSISTENCIES_DEEP_ANALYSIS.md  DOIT_TAGGING_AND_MANAGEMENT.md  ERROR_TEST_PLAN.md  ERROR_TEST_STATUS.md  EXECUTIVE_SUMMARY.md  EXPLORATION_SUMMARY.md  FEATURES_10_11_12.md  (+93 more)
.claude/: settings.json  settings.json.backup.uvx
.claude-trace/: log-2025-10-09-16-51-34.jsonl
.claude.backup.20251118_220151/: settings.json
.claude.backup.20251119_093006/: settings.json
.claude.backup.20251202_165903/: settings.json
.claude.backup.20260117_133518/: settings.json
.github/: CICD_SETUP.md  dependabot.yml  validate_workflows.sh
Specs/: azlin-restore-command.md
benchmarks/: README.md  benchmark_parallel_vm_list.py  benchmark_vm_list.py
docs/: AGENTIC_ARCHITECTURE_PROPOSALS.md  AGENTIC_INTEGRATION_TESTS.md  AI_AGENT_GUIDE.md  AMPLIFIER_CHEATSHEET.md  API_CONTRACTS_AZDOIT.md  API_REFERENCE.md  ARCHITECTURE.md  AUTH_ARCHITECTURE_ANALYSIS.md  AUTH_ARCHITECTURE_DESIGN.md  AUTH_IMPLEMENTATION_GUIDE.md  AUTOPILOT_SPEC.md  AZDOIT.md  AZDOIT_ARCHITECTURE.md  AZDOIT_CONTRACTS_SUMMARY.md  AZDOIT_IMPLEMENTATION_GUIDE.md  AZDOIT_README.md  AZDOIT_SECURITY_DESIGN.md  AZDOIT_SECURITY_IMPLEMENTATION.md  AZDOIT_SECURITY_SUMMARY.md  AZDOIT_TEST_STRATEGY.md  AZDOIT_VISUAL_SUMMARY.txt  AZLIN.md  AZURE_CLI_COMMAND_DISPLAY_SECURITY.md  AZURE_CLI_SECURITY_SUMMARY.md  Azure_64GB_RAM_VM_Analysis.md  BASTION_DEFAULT_QUICK_START.md  BASTION_DEFAULT_TEST_SPEC.md  BASTION_SECURITY_REQUIREMENTS.md  BASTION_SECURITY_TESTING.md  (+51 more)
docs-site/: README.md  changelog.md  faq.md  index.md  license.md
rust/: BENCHMARKS.md  Cargo.toml  README.md  pyproject.toml
rust/.cargo/: audit.toml
rust/crates/azlin/: Cargo.toml
rust/crates/azlin-ai/: Cargo.toml
rust/crates/azlin-ai/src/: lib.rs
rust/crates/azlin-azure/: Cargo.toml
rust/crates/azlin-azure/src/: auth.rs  cloud_init.rs  costs.rs  error_handler.rs  lib.rs  native_tunnel.rs  ops.rs  orphan_detector.rs  rate_limiter.rs  region_fit.rs  retry.rs  subprocess.rs  vm.rs
rust/crates/azlin-azure/tests/: native_tunnel_unit.rs
rust/crates/azlin-cli/: Cargo.toml
rust/crates/azlin-cli/src/: lib.rs  parity_tests.rs  table.rs  table_render.rs
rust/crates/azlin-core/: Cargo.toml
rust/crates/azlin-core/src/: config.rs  error.rs  lib.rs  models.rs  sanitizer.rs
rust/crates/azlin-ssh/: Cargo.toml
rust/crates/azlin-ssh/src/: lib.rs
rust/crates/azlin/.local/state/gh/: device-id
rust/crates/azlin/src/: auth_forward.rs  auth_helpers.rs  auth_test_helpers.rs  autopilot_helpers.rs  autopilot_parse_helpers.rs  azdoit.rs  azdoit_tests.rs  azdoit_tests2.rs  bastion_helpers.rs  bastion_tunnel.rs  batch_helpers.rs  batch_progress.rs  cmd_ai.rs  cmd_ai_ops.rs  cmd_ai_ops2.rs  cmd_auth.rs  cmd_autopilot.rs  cmd_backup.rs  cmd_backup_ops.rs  cmd_batch.rs  cmd_cleanup.rs  cmd_cleanup_costs.rs  cmd_cleanup_costs2.rs  cmd_cleanup_ops.rs  cmd_completions.rs  cmd_config_diff.rs  cmd_config_init.rs  cmd_connect.rs  cmd_context.rs  cmd_dr.rs  cmd_env.rs  cmd_gui.rs  cmd_history.rs  cmd_infra.rs  cmd_infra_ops.rs  cmd_infra_ops2.rs  cmd_keys.rs  cmd_lifecycle.rs  cmd_list.rs  cmd_list_data.rs  (+69 more)
rust/crates/azlin/src/handlers/: autopilot.rs  batch.rs  cleanup.rs  connect.rs  context.rs  costs.rs  create.rs  health.rs  help.rs  keys.rs  list.rs  mod.rs  show.rs  snapshot.rs  storage.rs  tags.rs
rust/crates/azlin/src/handlers/tests/: common.rs  mod.rs  test_group_00.rs  test_group_01.rs  test_group_02.rs  test_group_03.rs  test_group_04.rs  test_group_05.rs  test_group_06.rs  test_group_07.rs  test_group_08.rs  test_group_09.rs  test_group_10.rs  test_group_11.rs  test_group_12.rs
rust/crates/azlin/src/tests/: common.rs  mod.rs  test_group_00.rs  test_group_01.rs  test_group_02.rs  test_group_03.rs  test_group_04.rs  test_group_05.rs  test_group_06.rs  test_group_07.rs  test_group_08.rs  test_group_09.rs  test_group_10.rs  test_group_11.rs  test_group_12.rs  test_group_13.rs  test_group_14.rs  test_group_15.rs  test_group_16.rs  test_group_17.rs  test_group_18.rs  test_group_19.rs  test_group_20.rs  test_group_21.rs  test_group_22.rs  test_group_23.rs  test_group_24.rs  test_group_25.rs  test_group_26.rs  test_group_27.rs  test_group_28.rs  test_group_29.rs  test_group_30.rs  test_group_31.rs  test_group_32.rs  test_group_33.rs  test_group_34.rs  test_group_35.rs  test_group_36.rs  test_group_37.rs  (+39 more)
rust/crates/azlin/tests/: azure_live_integration.rs  backup_dr_integration.rs  bastion_integration.rs  cli_integration.rs  config_integration.rs  doit_integration.rs  error_integration.rs  home_disk_integration.rs  lifecycle_integration.rs  live_commands_integration.rs  local_e2e.rs  multi_vm_integration.rs  output_format_integration.rs  parity_integration.rs  restore_integration.rs  session_integration.rs  storage_integration.rs  template_integration.rs  tunnel_lifetime_integration.rs
rust/crates/azlin/tests/integration/: mod.rs
rust/docs/: ARCHITECTURE.md
rust/scripts/: capture_golden.sh  capture_golden_python.sh  compare.sh  compare_golden.sh  generate_manpages.sh
rust/tests/golden/: .gitignore  list.csv
rust/tests/golden_diff/: .gitignore
rust/tests/golden_python/: .gitignore
(+2049 files in other folders)
