[package]
name = "azlin-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Anthropic Claude API integration for azlin NLP commands"

[dependencies]
azlin-core = { path = "../azlin-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
