[package]
name = "azlin-azure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Azure SDK integration for azlin - VM management, auth, networking"

[dependencies]
azlin-core = { path = "../azlin-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
azure_identity = { workspace = true }
azure_core = { workspace = true }
azure_mgmt_compute = { workspace = true }
azure_mgmt_network = { workspace = true }
azure_mgmt_resources = { workspace = true }
azure_mgmt_storage = { workspace = true }
azure_security_keyvault_secrets = { workspace = true }
azure_mgmt_costmanagement = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
