[package]
name = "azlin-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI command definitions and terminal UI for azlin"

[dependencies]
azlin-core = { path = "../azlin-core" }
azlin-azure = { path = "../azlin-azure" }
azlin-ssh = { path = "../azlin-ssh" }
azlin-ai = { path = "../azlin-ai" }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
